--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^3.5.0",
+    "eslint": "^3.17.1",
     "jsdom": "^9.11.0",
     "mocha": "^3.2.0"
   }
